--- a/src/app/src/main/res/layout/activity_user_page.xml
+++ b/src/app/src/main/res/layout/activity_user_page.xml
@@ -6,4 +6,53 @@
     android:layout_height="match_parent"
     tools:context=".Activities.UserPage">
 
+    <TextView
+        android:id="@+id/textView5"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="175dp"
+        android:layout_marginTop="200dp"
+        android:text="UserPage"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
+    <TextView
+        android:id="@+id/HomePage"
+        android:layout_width="100dp"
+        android:layout_height="61dp"
+        android:text="Home Page"
+        android:textSize="24sp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintStart_toStartOf="parent" />
+
+    <TextView
+        android:id="@+id/Favorite"
+        android:layout_width="100dp"
+        android:layout_height="61dp"
+        android:layout_marginStart="1dp"
+        android:text="Favorite"
+        android:textSize="24sp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintStart_toEndOf="@+id/TradePage" />
+
+    <TextView
+        android:id="@+id/TradePage"
+        android:layout_width="105dp"
+        android:layout_height="61dp"
+        android:layout_marginStart="1dp"
+        android:text="Trade"
+        android:textSize="24sp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintStart_toEndOf="@+id/UserPage" />
+
+    <TextView
+        android:id="@+id/UserPage"
+        android:layout_width="100dp"
+        android:layout_height="61dp"
+        android:layout_marginStart="1dp"
+        android:text="User Page"
+        android:textSize="24sp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintStart_toEndOf="@+id/HomePage" />
+
 </androidx.constraintlayout.widget.ConstraintLayout>
