--- a/src/app/src/main/res/layout/activity_favorite.xml
+++ b/src/app/src/main/res/layout/activity_favorite.xml
@@ -4,15 +4,15 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".Activities.TradePlatform">
+    tools:context=".Activities.Favorite">
 
     <TextView
-        android:id="@+id/textView2"
+        android:id="@+id/textView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="175dp"
-        android:layout_marginTop="241dp"
-        android:text="Trade"
+        android:layout_marginTop="202dp"
+        android:text="favorite"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
