--- a/src/app/src/main/res/layout/activity_login.xml
+++ b/src/app/src/main/res/layout/activity_login.xml
@@ -83,6 +83,7 @@
                 android:layout_height="wrap_content"
                 android:layout_margin="32dp"
                 android:background="@drawable/blue_button_background"
+                android:textAllCaps="false"
                 android:text="Login" />
 
             <TextView
@@ -145,6 +146,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:background="@drawable/blue_button_background"
+                    android:textAllCaps="false"
                     android:text="Register" />
             </LinearLayout>
 
