--- a/src/app/src/main/res/values/colors.xml
+++ b/src/app/src/main/res/values/colors.xml
@@ -5,4 +5,5 @@
     <color name="lightblue">#A0E9FF</color>
     <color name="gray">#B5C0D0</color>
     <color name="red">#E78895</color>
+    <color name="grey">#F5F5F5</color>
 </resources>
