Create a Post activity with a basic UI.

--- a/src/app/src/main/res/layout/activity_post.xml
+++ b/src/app/src/main/res/layout/activity_post.xml
@@ -32,25 +32,31 @@
         android:id="@+id/discription_product"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginStart="100dp"
+        android:layout_marginTop="79dp"
         android:ems="10"
         android:inputType="text"
         android:text="Discription"
-        tools:layout_editor_absoluteX="100dp"
-        tools:layout_editor_absoluteY="416dp" />
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/imageView" />
 
     <Button
         android:id="@+id/post_button"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginStart="288dp"
+        android:layout_marginTop="197dp"
         android:text="Post"
-        tools:layout_editor_absoluteX="288dp"
-        tools:layout_editor_absoluteY="658dp" />
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/discription_product" />
 
     <Button
         android:id="@+id/back_button"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginStart="16dp"
+        android:layout_marginTop="25dp"
         android:text="Back"
-        tools:layout_editor_absoluteX="16dp"
-        tools:layout_editor_absoluteY="25dp" />
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 </androidx.constraintlayout.widget.ConstraintLayout>
