Added an Activity for a private messaging menu, which will eventually allow user to access different messages. Added a list view, which will be how users can navigate messages from different users.

--- a/src/app/src/main/res/layout/activity_home_page.xml
+++ b/src/app/src/main/res/layout/activity_home_page.xml
@@ -330,8 +330,8 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_weight="1"
-                    android:text="Private"
                     android:clickable="true"
+                    android:text="@string/btn_private"
                     android:textAlignment="center"
                     android:textColor="@color/gray"
                     android:textSize="20dp" />
