--- a/src/app/src/main/res/layout/activity_post.xml
+++ b/src/app/src/main/res/layout/activity_post.xml
@@ -83,10 +83,9 @@
 
     <ImageView
         android:id="@+id/imageView"
-        android:layout_width="wrap_content"
-        android:layout_height="130dp"
-        android:layout_marginStart="132dp"
-        android:layout_marginTop="12dp"
+        android:layout_width="414dp"
+        android:layout_height="153dp"
+        android:layout_marginTop="16dp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/productDescription"
         tools:src="@tools:sample/avatars" />
