--- a/src/app/src/main/res/values/colors.xml
+++ b/src/app/src/main/res/values/colors.xml
@@ -6,4 +6,5 @@
     <color name="gray">#B5C0D0</color>
     <color name="red">#E78895</color>
     <color name="grey">#F5F5F5</color>
+    <color name="blue_grey">#607D8B</color>
 </resources>
