--- a/src/app/src/main/res/layout/activity_login.xml
+++ b/src/app/src/main/res/layout/activity_login.xml
@@ -127,10 +127,10 @@
 
             <LinearLayout
                 android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:orientation="horizontal"
+                android:layout_height="60dp"
+                android:layout_margin="30dp"
                 android:gravity="center"
-                android:layout_margin="30dp">
+                android:orientation="horizontal">
 
                 <TextView
                     android:id="@+id/textView18"
@@ -138,16 +138,16 @@
                     android:layout_height="wrap_content"
                     android:layout_weight="1"
                     android:text="What? You're not a user?"
-                    android:textSize="16sp"
-                    android:textAlignment="center"/>
+                    android:textAlignment="center"
+                    android:textSize="16sp" />
 
                 <androidx.appcompat.widget.AppCompatButton
                     android:id="@+id/register"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:background="@drawable/blue_button_background"
-                    android:textAllCaps="false"
-                    android:text="Register" />
+                    android:text="Register"
+                    android:textAllCaps="false" />
             </LinearLayout>
 
         </LinearLayout>
